--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 numpy==1.17.4
-https://download.pytorch.org/whl/cpu/torch-1.0.1.post2-cp37-cp37m-linux_x86_64.whl
+-f https://download.pytorch.org/whl/torch_stable.html
+torch==1.8.1+cpu
 Flask==2.0.1
 Pillow==8.2.0
 gunicorn == 20.1.0
