--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 numpy==1.17.4
+Flask==2.0.1
 -f https://download.pytorch.org/whl/torch_stable.html
 torch==1.8.1+cpu
-Flask==2.0.1
+onnxruntime==1.8.0
 Pillow==8.2.0
 gunicorn == 20.1.0
